Added functionality for change password. closes #29

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 message.emailExists=email already exists!
 message.matchingPassword=passwords doesn't match
+message.badPassword=password incorrect
 
 #message.email=email required
 #message.password=Password required
