--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,2 +1,3 @@
 message.emailExists=el email ya existe!
 message.matchingPassword=las contraseñas no coinciden
+message.badPassword=contraseña incorrecta
