normalization of validation error messages thrown by FormPassword, FormUser and User through messages.properties and messages_es_ES.properties

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,9 +1,13 @@
-message.emailExists=email already exists!
-message.matchingPassword=passwords doesn't match
-message.badPassword=password incorrect
+email.notUnique=Email already exists!
+email.notEmpty=Email required
+email.notValid=Not a valid email format
 
-#message.email=email required
-#message.password=Password required
+password.notMatching=Passwords doesn't match
+password.invalid=Password incorrect
+password.notEmpty=Password required
+
+
+
 #message.unauth=Unauthorized access!!
 #message.badCredentials=Invalid username or password
 #message.sessionExpired=Session timed out
