--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,3 +1,7 @@
-message.emailExists=el email ya existe!
-message.matchingPassword=las contraseñas no coinciden
-message.badPassword=contraseña incorrecta
+email.notUnique=El email ya existe!
+email.notEmpty=Email requerido
+email.notValid=Formato de email no válido
+
+password.notMatching=Las contraseñas no coinciden
+password.invalid=Contraseña incorrecta
+password.notEmpty=Contraseña requerida
