Added backend validation on password format with @Pattern annotation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,10 +1,11 @@
 email.notUnique=Email already exists!
-email.notEmpty=Email required
-email.notValid=Not a valid email format
+#email.notEmpty=Email required
+email.invalidFormat=Not a valid email format
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
-password.notEmpty=Password required
+#password.notEmpty=Password required
+password.invalidFormat=The password must be at least 8 characters, with at least one lowercase, one uppercase and one number
 
 
 
