--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,7 +1,8 @@
 email.notUnique=El email ya existe!
-email.notEmpty=Email requerido
-email.notValid=Formato de email no válido
+#email.notEmpty=Email requerido
+email.invalidFormat=Formato de email no válido
 
 password.notMatching=Las contraseñas no coinciden
 password.invalid=Contraseña incorrecta
-password.notEmpty=Contraseña requerida
+#password.notEmpty=Contraseña requerida
+password.invalidFormat=La contraseña debe tener al menos 8 caracteres, con al menos una minúscula, una mayúscula y un número
