added TEXT_BASIC_PATTERN to Patterns, and bound it to firstName and lastName fields

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,8 @@ password.invalid=Password incorrect
 #password.notEmpty=Password required
 password.invalidFormat=The password must be at least 8 characters, with at least one lowercase, one uppercase and one number
 
+text.basic.invalidFormat=This field must have zero to thirty simple characters (underscore (_), letters or numbers)
+
 
 
 #message.unauth=Unauthorized access!!
