added basic backend constraint to book title (and mock backend constraint to isbn, equal to basic text constraint). closes #38

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,8 @@ password.invalidFormat=The password must be at least 8 characters, with at least
 
 text.basic.invalidFormat=This field must have zero to thirty simple characters (underscore (_), letters or numbers)
 
+isbn.invalidFormat=Not a valid ISBN format
+
 
 
 #message.unauth=Unauthorized access!!
