--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -8,3 +8,5 @@ password.invalid=Contraseña incorrecta
 password.invalidFormat=La contraseña debe tener al menos 8 caracteres, con al menos una minúscula, una mayúscula y un número
 
 text.basic.invalidFormat=Este campo debe tener de cero a treinta caracteres simples (guión bajo (_), letras ó números)
+
+isbn.invalidFormat=Formato de ISBN no válido
