added basic backend constraint to category name. closes #39

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,7 +7,7 @@ password.invalid=Password incorrect
 #password.notEmpty=Password required
 password.invalidFormat=The password must be at least 8 characters, with at least one lowercase, one uppercase and one number
 
-text.basic.invalidFormat=This field must have zero to thirty simple characters (underscore (_), letters or numbers)
+text.W_0_30_$=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
 
 isbn.invalidFormat=Not a valid ISBN format
 
