--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -7,6 +7,6 @@ password.invalid=Contraseña incorrecta
 #password.notEmpty=Contraseña requerida
 password.invalidFormat=La contraseña debe tener al menos 8 caracteres, con al menos una minúscula, una mayúscula y un número
 
-text.basic.invalidFormat=Este campo debe tener de cero a treinta caracteres simples (guión bajo (_), letras ó números)
+text.W_0_30_$=Este campo debe tener de cero a treinta caracteres de entre: guión medio (-), espacio, guión bajo (_), letras ó números
 
 isbn.invalidFormat=Formato de ISBN no válido
