added backend isbn regex and checksum validation. closes #36, closes #44

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -10,6 +10,7 @@ password.invalidFormat=The password must be at least 8 characters, with at least
 text.W_0_30_$=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
 
 isbn.invalidFormat=Not a valid ISBN format
+isbn.error=The format or checksum (last digit) is not correct
 
 
 
