--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -10,3 +10,4 @@ password.invalidFormat=La contraseña debe tener al menos 8 caracteres, con al m
 text.W_0_30_$=Este campo debe tener de cero a treinta caracteres de entre: guión medio (-), espacio, guión bajo (_), letras ó números
 
 isbn.invalidFormat=Formato de ISBN no válido
+isbn.error=El formato ó la suma de verificación (último dígito) no son correctos
