checked for isbn uniqueness, closes #37

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,6 +11,7 @@ text.W_0_30_$=This field must have zero to thirty characters between: middle hyp
 
 isbn.invalidFormat=Not a valid ISBN format
 isbn.error=The format or checksum (last digit) is not correct
+isbn.notUnique=ISBN already exists!
 
 
 
