--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -11,3 +11,4 @@ text.W_0_30_$=Este campo debe tener de cero a treinta caracteres de entre: guió
 
 isbn.invalidFormat=Formato de ISBN no válido
 isbn.error=El formato ó la suma de verificación (último dígito) no son correctos
+isbn.notUnique=El ISBN ya existe!
