added image validation on newBook and editBook workflow, closes #49, closes #51

--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -12,3 +12,5 @@ text.W_0_30_$=Este campo debe tener de cero a treinta caracteres de entre: guió
 isbn.invalidFormat=Formato de ISBN no válido
 isbn.error=El formato ó la suma de verificación (último dígito) no son correctos
 isbn.notUnique=El ISBN ya existe!
+
+image.error=La imagen supera el tamaño máximo (128 KB), ó no es un fichero de imagen reconocido
