--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ isbn.invalidFormat=Not a valid ISBN format
 isbn.error=The format or checksum (last digit) is not correct
 isbn.notUnique=ISBN already exists!
 
+image.error=The image exceeds the maximum size (128 KB), or it is not a recognized image file
 
 
 #message.unauth=Unauthorized access!!
