added html pattern constraint to book title (closes #41) and book isbn (closes #42). Also added html validation against image field emptiness (closes #52), and against bad MIME type (closes #50).

--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -7,7 +7,7 @@ password.invalid=Contraseña incorrecta
 #password.notEmpty=Contraseña requerida
 password.invalidFormat=La contraseña debe tener al menos 8 caracteres, con al menos una minúscula, una mayúscula y un número
 
-text.W_0_30_$=Este campo debe tener de cero a treinta caracteres de entre: guión medio (-), espacio, guión bajo (_), letras ó números
+text.basic=Este campo debe tener de cero a treinta caracteres de entre: guión medio (-), espacio, guión bajo (_), letras ó números
 
 isbn.invalidFormat=Formato de ISBN no válido
 isbn.error=El formato ó la suma de verificación (último dígito) no son correctos
