added frontend password matching functionality (closes #46), and also added frontend password regex functionality (closes #47).

--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -5,7 +5,7 @@ email.invalidFormat=Formato de email no válido
 password.notMatching=Las contraseñas no coinciden
 password.invalid=Contraseña incorrecta
 #password.notEmpty=Contraseña requerida
-password.invalidFormat=La contraseña debe tener al menos 8 caracteres, con al menos una minúscula, una mayúscula y un número
+password.invalidFormat=La contraseña debe tener entre 8 y 16 caracteres, con al menos una minúscula, una mayúscula y un número
 
 text.basic=Este campo debe tener de cero a treinta caracteres de entre: guión medio (-), espacio, guión bajo (_), letras ó números
 
