--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,7 +5,7 @@ email.invalidFormat=Not a valid email format
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
 #password.notEmpty=Password required
-password.invalidFormat=The password must be at least 8 characters, with at least one lowercase, one uppercase and one number
+password.invalidFormat=The password must be between 8 and 16 characters, with at least one lowercase, one uppercase and one number
 
 text.basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
 
