Book model expanded

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,23 +1,17 @@
 email.notUnique=Email already exists!
-#email.notEmpty=Email required
 email.invalidFormat=Not a valid email format
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
-#password.notEmpty=Password required
 password.invalidFormat=The password must be between 8 and 16 characters, with at least one lowercase, one uppercase and one number
 
 text.basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
+text.long=Este campo debe tener de 0 a 250 caracteres
+
+number.outOfRange=El número está fuera del intervalo válido
 
 isbn.invalidFormat=Not a valid ISBN format
 isbn.error=The format or checksum (last digit) is not correct
 isbn.notUnique=ISBN already exists!
 
 image.error=The image exceeds the maximum size (128 KB), or it is not a recognized image file
-
-
-#message.unauth=Unauthorized access!!
-#message.badCredentials=Invalid username or password
-#message.sessionExpired=Session timed out
-#message.logoutError=Sorry, error login out
-#message.logoutSucc=You logged out successfully
