--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,13 +1,14 @@
 email.notUnique=El email ya existe!
-#email.notEmpty=Email requerido
 email.invalidFormat=Formato de email no válido
 
 password.notMatching=Las contraseñas no coinciden
 password.invalid=Contraseña incorrecta
-#password.notEmpty=Contraseña requerida
 password.invalidFormat=La contraseña debe tener entre 8 y 16 caracteres, con al menos una minúscula, una mayúscula y un número
 
 text.basic=Este campo debe tener de cero a treinta caracteres de entre: guión medio (-), espacio, guión bajo (_), letras ó números
+text.long=Este campo debe tener de 0 a 250 caracteres
+
+int.outOfRange=El número está fuera del intervalo válido
 
 isbn.invalidFormat=Formato de ISBN no válido
 isbn.error=El formato ó la suma de verificación (último dígito) no son correctos
