--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,10 +8,13 @@ password.invalidFormat=The password must be between 8 and 16 characters, with at
 text.basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
 text.long=Este campo debe tener de 0 a 250 caracteres
 
-number.outOfRange=El número está fuera del intervalo válido
+number.range=El número debe estar dentro del rango correcto
+number.positive=This number must be greater than zero
 
 isbn.invalidFormat=Not a valid ISBN format
 isbn.error=The format or checksum (last digit) is not correct
 isbn.notUnique=ISBN already exists!
 
 image.error=The image exceeds the maximum size (128 KB), or it is not a recognized image file
+
+date.notValid=Not a valid date
