-adapted newBook.html to new expanded book model. -Created new FormBook class to deliver all book info. -max number of authors restricted to 5 -added year field to book model

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,3 +18,10 @@ isbn.notUnique=ISBN already exists!
 image.error=The image exceeds the maximum size (128 KB), or it is not a recognized image file
 
 date.notValid=Not a valid date
+year.notValid=Not a valid year
+
+array.overSize=Superado el máximo número de elementos permitido
+
+price.notValid=Not a valid price
+
+validation.generic=Please, correct the problems below and resubmit
