working on email confirm registration

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 email.notUnique=Email already exists!
 email.invalidFormat=Not a valid email format
+email.confirm=<p>Please click on the link below to end your registration process:</p>
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
