added email confirmation on registration process

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,9 @@
 email.notUnique=Email already exists!
 email.invalidFormat=Not a valid email format
-email.confirm=<p>Please click on the link below to end your registration process:</p>
+email.confirm=<p>Please, click on the link below to confirm your registration:</p>
+
+auth.invalidToken=Token not valid
+auth.expiredToken=Token expired
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
