added custom authentication failure handler

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,6 +4,9 @@ email.confirm=<p>Please, click on the link below to confirm your registration:</
 
 auth.invalidToken=Token not valid
 auth.expiredToken=Token expired
+auth.badCredentials=Email or password are not correct
+auth.disabled=User is disabled. Please check your email
+auth.expired=User account has expired
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
