--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,6 @@
 email.notUnique=Email already exists!
 email.invalidFormat=Not a valid email format
-email.confirm=<p>Please, click on the link below to confirm your registration:</p>
+email.confirm=<p>Please, click on the link below to complete your email address confirmation:</p>
 
 auth.invalidToken=Token not valid
 auth.expiredToken=Token expired
