added delete user account functionality. Closes #33. Closes #79

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,11 +1,11 @@
-email.notUnique=Email already exists!
+email.notUnique=Sorry but there is some email problem. Please, try again
 email.invalidFormat=Not a valid email format
 email.confirm=<p>Please, click on the link below to complete your email address confirmation:</p>
 
 auth.invalidToken=Token not valid
 auth.expiredToken=Token expired
 auth.badCredentials=Email or password are not correct
-auth.disabled=User is disabled. Please check your email
+auth.disabled=Sorry but there is some email problem. Please, check your email or try again
 auth.expired=User account has expired
 
 password.notMatching=Passwords doesn't match
