added proper management of email-already-exist situation on registration workflow. Closes #81. Closes #82

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
-email.notUnique=Sorry but there is some email problem. Please, try again
+email.notUnique=Sorry but there is some email problem. Please, check your email or try again
+email.checkEmail=Please, check your email
 email.invalidFormat=Not a valid email format
 email.confirm=<p>Please, click on the link below to complete your email address confirmation:</p>
 
