--- a/src/main/resources/messages_es_ES.properties
+++ b/src/main/resources/messages_es_ES.properties
@@ -1,4 +1,4 @@
-email.notUnique=Disculpa pero ha habido un error con el email. Por favor, intentalo otra vez
+email.notUnique=Disculpa pero ha habido un error con el email. Por favor, intentalo otra vez ó visita tu email
 email.invalidFormat=Formato de email no válido
 
 password.notMatching=Las contraseñas no coinciden
