admin can add several images at once. Along with previous commit it closes #85

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -23,7 +23,8 @@ isbn.invalidFormat=Not a valid ISBN format
 isbn.error=The format or checksum (last digit) is not correct
 isbn.notUnique=ISBN already exists!
 
-image.error=The image exceeds the maximum size (128 KB), or it is not a recognized image file
+image.error=The image exceeds the maximum size (512 KB) or it is not a recognized image file
+images.error=At least one image exceeds the maximum size (512 KB) or it is not a recognized image file
 
 date.notValid=Not a valid date
 year.notValid=Not a valid year
