added protection against brute force authentication attempts. Closes #78

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ auth.expiredToken=Token expired
 auth.badCredentials=Email or password are not correct
 auth.disabled=Sorry but there is some email problem. Please, check your email or try again
 auth.expired=User account has expired
+auth.locked=The user account has been locked for security reasons. Please, check your email
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
