-added exception management on UserController-related and HomeController-related code -controller classes code refactor: all of them (without rest controllers) inherit from abstract BasicController

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 email.notUnique=Sorry but there is some email problem. Please, check your email or try again
+email.empty=Email is needed
 email.checkEmail=Please, check your email
 email.invalidFormat=Not a valid email format
 email.confirm=<p>Please, click on the link below to complete your email address confirmation:</p>
@@ -12,6 +13,7 @@ auth.locked=The user account has been locked for security reasons. Please, check
 
 password.notMatching=Passwords doesn't match
 password.invalid=Password incorrect
+password.empty=Password is needed
 password.invalidFormat=The password must be between 8 and 16 characters, with at least one lowercase, one uppercase and one number
 
 text.basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
