--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,3 +37,10 @@ array.overSize=Superado el máximo número de elementos permitido
 price.notValid=Not a valid price
 
 validation.generic=Please, correct the problems below and resubmit
+
+http.error.404.message=Sorry, we couldn't find the page you were looking for
+http.error.404.title=Page Not Found
+http.error.500.message=Sorry, some internal error occurred. We are working to fix it as soon as possible
+http.error.500.title=Internal Server Error
+http.error.message=Sorry, some error occurred
+http.error.title=Error
