validation classes refactor

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,7 +19,6 @@ password.invalidFormat=The password must be between 8 and 16 characters, with at
 text.basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
 text.long=Este campo debe tener de 0 a 250 caracteres
 
-number.range=El número debe estar dentro del rango correcto
 number.positive=This number must be greater than zero
 
 isbn.invalidFormat=Not a valid ISBN format
@@ -37,6 +36,11 @@ array.overSize=Superado el máximo número de elementos permitido
 price.notValid=Not a valid price
 
 validation.generic=Please, correct the problems below and resubmit
+validation.regex.generic=Pattern not correct.
+
+validation.numeric.generic=El número debe estar dentro del rango correcto
+validation.numeric.stock=The stock amount is out of range
+validation.numeric.pages=The pages amount is out of range
 
 http.error.404.message=Sorry, we couldn't find the page you were looking for
 http.error.404.title=Page Not Found
