--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,6 +37,7 @@ price.notValid=Not a valid price
 
 validation.generic=Please, correct the problems below and resubmit
 validation.regex.generic=Pattern not correct.
+validation.regex.text-query=Not allowed characters
 
 validation.numeric.generic=El número debe estar dentro del rango correcto
 validation.numeric.stock=The stock amount is out of range
