added backend validation to comment field at user deletion. This commit and the previous one Closes #80

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,9 +16,6 @@ password.invalid=Password incorrect
 password.empty=Password is needed
 password.invalidFormat=The password must be between 8 and 16 characters, with at least one lowercase, one uppercase and one number
 
-text.basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
-text.long=Este campo debe tener de 0 a 250 caracteres
-
 number.positive=This number must be greater than zero
 
 isbn.invalidFormat=Not a valid ISBN format
@@ -33,11 +30,12 @@ year.notValid=Not a valid year
 
 array.overSize=Superado el máximo número de elementos permitido
 
-price.notValid=Not a valid price
-
 validation.generic=Please, correct the problems below and resubmit
 validation.regex.generic=Pattern not correct.
 validation.regex.text-query=Not allowed characters
+validation.regex.text-long=Este campo debe tener de 0 a 250 caracteres
+validation.regex.text-basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
+validation.regex.price=Not a valid price
 
 validation.numeric.generic=El número debe estar dentro del rango correcto
 validation.numeric.stock=The stock amount is out of range
