--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,6 +26,7 @@ image.error=The image exceeds the maximum size (512 KB) or it is not a recognize
 images.error=At least one image exceeds the maximum size (512 KB) or it is not a recognized image file
 
 date.notValid=Not a valid date
+date.invalid=Please, select a valid date
 year.notValid=Not a valid year
 
 array.overSize=Superado el máximo número de elementos permitido
