added phone number validation. Closes #109

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,6 +37,7 @@ validation.regex.text-query=Not allowed characters
 validation.regex.text-long=Este campo debe tener de 0 a 250 caracteres
 validation.regex.text-basic=This field must have zero to thirty characters between: middle hyphen (-), space, underscore (_), letters or numbers
 validation.regex.price=Not a valid price
+validation.regex.phone=Not a valid phone number
 
 validation.numeric.generic=El número debe estar dentro del rango correcto
 validation.numeric.stock=The stock amount is out of range
